--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@
  * Open Source Software published under the Apache Licence, Version 2.0.
  */
 
-rootProject.name = 'wordy'
+rootProject.name = 'vocabhunter'
 
 include 'core'
 include 'command-line'
