--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ allprojects {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.8'
+    description 'Setup the Gradle wrapper'
+    gradleVersion = '2.9'
 }
 
 buildscript {
