--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,15 @@
 language:
   - java
 
-jdk:
-  - oraclejdk8
-
 os:
-  - linux
+  - osx
 
 sudo: false
 
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
-
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+before_install:
+  - brew update
+  - brew tap caskroom/cask
+  - brew install Caskroom/cask/java
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -32,4 +24,4 @@ cache:
 install: true
 
 script:
-  - ./gradlew clean build jfxbundle
+  - ./gradlew clean build -x test
