--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -42,3 +42,9 @@ dependencies {
     testCompile 'org.mockito:mockito-all:1.10.19'
     runtime 'org.codehaus.janino:janino:2.7.8'
 }
+
+test {
+    if (project.hasProperty("skipGuiTests")) {
+        exclude 'io/github/vocabhunter/gui/main/GuiTest*'
+    }
+}
