--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,8 +17,8 @@ artifacts {
 
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.1-1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.2'
     compile 'commons-io:commons-io:2.4'
     compile 'org.apache.tika:tika-parsers:1.11'
-    compile 'org.slf4j:slf4j-api:1.7.14'
+    compile 'org.slf4j:slf4j-api:1.7.18'
 }
