--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,11 @@ addons:
     packages:
       - oracle-java8-installer
 
+before_install:
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1366x768x16"
+
 before_script:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -32,7 +33,7 @@ cache:
 install: true
 
 script:
-  - ./gradlew clean build -info -PskipGuiTests
+  - ./gradlew clean build -info
 
 deploy:
   provider: releases
