--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -37,10 +37,9 @@ startScripts {
 dependencies {
     compile project(':core')
     compile 'org.picocontainer:picocontainer:2.15'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile project(path: ':core', configuration: 'tests')
     testCompile 'org.testfx:testfx-core:4.0.4-alpha'
-    testCompile 'org.mockito:mockito-all:1.10.19'
+    testCompile 'org.mockito:mockito-core:1.10.19'
     testRuntime 'org.jfxtras:openjfx-monocle:1.8.0_20'
     runtime 'org.codehaus.janino:janino:2.7.8'
 }
