--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ allprojects {
 
 task wrapper(type: Wrapper) {
     description 'Setup the Gradle wrapper'
-    gradleVersion = '2.12'
+    gradleVersion = '2.13'
+    distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
 
 buildscript {
