Added non-headless GUI test support for the command line

--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -48,5 +48,7 @@ test {
     if (project.hasProperty("skipGuiTests")) {
         exclude 'io/github/vocabhunter/gui/main/GuiTest*'
     }
-    jvmArgs "-Dheadless=true"
+    if (!project.hasProperty("noHeadless")) {
+        jvmArgs "-Dheadless=true"
+    }
 }
