Switched from Maven Central to JCenter

--- a/package/build.gradle
+++ b/package/build.gradle
@@ -6,7 +6,7 @@ import org.gradle.internal.os.OperatingSystem;
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
