--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ task wrapper(type: Wrapper) {
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
@@ -41,7 +41,7 @@ subprojects {
     sourceCompatibility = 1.8
 
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
