--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.2.1'
     testRuntime 'org.jfxtras:openjfx-monocle:1.8.0_20'
     runtime 'org.codehaus.janino:janino:3.0.1'
+    runtime 'de.jensd:fontawesomefx-fontawesome:4.6.3'
 }
 
 test {
