Updated Jacoco version and included it in Travis run

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ cache:
 install: true
 
 script:
-  - ./gradlew clean build jfxNative checkBundle -info
+  - ./gradlew clean build jacoco jfxNative checkBundle -info
 
 deploy:
   provider: releases
