--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ subprojects {
 
     dependencies {
         testCompile 'junit:junit:4.12'
+        testCompile 'org.mockito:mockito-core:2.3.6'
         runtime 'ch.qos.logback:logback-classic:1.1.8'
     }
 
