--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ subprojects {
     }
 
     jacoco {
-        toolVersion = '0.7.7.201606060606'
+        toolVersion = '0.7.9'
     }
 
     jacocoTestReport {
