Disabled the default parallel build

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@
 
 version=1.0.21-SNAPSHOT
 
-org.gradle.parallel=true
+# The parallel build seems to be causing NPEs in the Travis build from FindBugs
+# org.gradle.parallel=true
