--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ subprojects {
 
     dependencies {
         testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0'
+        testCompile 'org.junit.jupiter:junit-jupiter-params:5.0.0'
         testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
         testCompile 'org.mockito:mockito-core:2.10.0'
         runtime 'ch.qos.logback:logback-classic:1.2.3'
