--- a/build.gradle
+++ b/build.gradle
@@ -57,11 +57,14 @@ subprojects {
     }
 
     dependencies {
-        testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0'
-        testCompile 'org.junit.jupiter:junit-jupiter-params:5.0.0'
-        testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
+        testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.2'
+        testCompile 'org.junit.jupiter:junit-jupiter-params:5.0.2'
+        testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.2'
         testCompile 'org.mockito:mockito-core:2.13.0'
         runtime 'ch.qos.logback:logback-classic:1.2.3'
+
+        // This was added for JUnit 5.0.2 - remove it if it's not required for a later release of JUnit
+        testCompile 'org.apiguardian:apiguardian-api:1.0.0'
     }
 
     pmd {
