add workaround for tests crash on windows

--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -56,6 +56,6 @@ junitPlatform {
 
 junitPlatformTest {
     if (!project.hasProperty("noHeadless")) {
-        jvmArgs "-Dheadless=true"
+        jvmArgs "-Dheadless=true -Dprism.text=t2k"
     }
 }
