Fixed a Gradle warning

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allprojects {
     group 'io.github.vocabhunter'
 }
 
-task wrapper(type: Wrapper) {
+wrapper {
     description 'Setup the Gradle wrapper'
     gradleVersion = '4.8'
     distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
