--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -38,20 +38,28 @@ startScripts {
 dependencies {
     compile project(':core')
     compile 'com.gluonhq:ignite-guice:1.0.2'
-    compile 'org.controlsfx:controlsfx:8.40.14'
-    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
+
+    // This is required for the conditional logic in the logback setup
+    runtime 'org.codehaus.janino:janino:3.0.8'
+
     testCompile project(path: ':core', configuration: 'tests')
-    if (JavaVersion.current() == JavaVersion.VERSION_1_9) {
-        testCompile('org.testfx:testfx-core:4.0.13-alpha') {
+
+    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+        compile 'org.controlsfx:controlsfx:8.40.14'
+        compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
+
+        testCompile 'org.testfx:testfx-core:4.0.14-alpha'
+        testRuntime 'org.testfx:openjfx-monocle:8u76-b04'
+    } else {
+        compile 'org.controlsfx:controlsfx:9.0.0'
+        compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
+
+        testCompile('org.testfx:testfx-core:4.0.12-alpha') {
             exclude group: 'org.testfx', module: 'testfx-internal-java8'
         }
-        testRuntime 'org.testfx:testfx-internal-java9:4.0.13-alpha'
+        testRuntime 'org.testfx:testfx-internal-java9:4.0.12-alpha'
         testRuntime 'org.testfx:openjfx-monocle:jdk-9+181'
-    } else {
-        testCompile 'org.testfx:testfx-core:4.0.13-alpha'
-        testRuntime 'org.testfx:openjfx-monocle:8u76-b04'
     }
-    runtime 'org.codehaus.janino:janino:3.0.8'
 }
 
 test {
