--- a/gui/build.gradle
+++ b/gui/build.gradle
@@ -5,7 +5,7 @@ import org.apache.tools.ant.filters.*
 
 apply plugin: 'application'
 
-mainClassName = "VocabHunter"
+mainClassName = "io.github.vocabhunter.gui.main.VocabHunterGuiExecutable"
 
 applicationName = "VocabHunter"
 
