--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # Open Source Software published under the Apache Licence, Version 2.0.
 #
 
-version=2.0.0-SNAPSHOT
+version=2.0.0
 
 # The parallel build seems to be causing NPEs in the Travis build from FindBugs
 # org.gradle.parallel=true
